<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MediaConf</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
 	<string name="title_activity_login">多媒体会议系统</string>
 	 <string-array name="confMessages">
        <item>会议名称</item>
        <item>会议主题</item>
        <item>持续时间</item>
        <item>会议主席</item>
    </string-array>
    
    <string-array name="resolList">
        <item>CIF(352*288)</item>
        <item>4CIF(704*576)</item>
        <item>720P(1280*720)</item>
        <item>1080P(1920*1080)</item>
        <item>QCIF(176*114)</item>
    </string-array>
    <string name="exit_app">退出程序</string>
    <string name="exit_conf">退出会议</string>
     	<string name="createConf">创建会议</string>
 	<string name="create_ok">确定</string>
 	<string name="create_conf_name">会议名称</string>
 	<string name="create_conf_subject">会议主题</string>
 	<string name="create_type_vas">无分屏</string>
 	<string name="create_type_four">四分屏</string>
 	<string name="create_type_six">5+1分屏</string>
 	<string name="create_choose_reso">视频分辨率:</string>
 	<string name="selectContact">选择参会人员</string>
 	<string name="create_conf_message">会议信息</string>
 	<string name="create_conf_type">会议类型</string>
 	<string name="my_contact">我的联系人</string>
 	<string name="my_group">我的群组</string>
 	<string name="speak_control">发言控制</string>
 	<string name="record_control">录音控制</string>
 	<string name="start_record">开始录音</string>
 	<string name="end_record">结束录音</string>
 	<string name="yanjiang">演讲</string>
 	<string name="tiwen">提问</string>
 	<string name="taolun">讨论</string>
 	<string name="ziyou">自由</string>
 	<string name="start_speak">开始发言</string>
 	<string name="end_speak">停止发言</string>
 	<string name="manage_conf">会议管理</string>
 	<string name="username_hint">请输入登录账号</string>
 	<string name="password_hint">请输入密码</string>
 	<string name="serverip_hint">请输入服务器IP</string>
 	<string name="login_username">用户名:</string>
 	<string name="login_password">密  码:</string>
 	<string name="login_server">服务器IP:</string>
 	<string name="remember">记住密码</string>
 	<string name="modify">修改</string>
 	<string name="reset">重置</string>
 	<string name="old_pass">旧密码:</string>
 	<string name="new_pass">新密码:</string>
 	<string name="confirm_new_pass">确认密码:</string>
 	<string name="add_fg">增加分组</string>
 	<string name="rename_fg">重命名分组</string>
 	<string name="add_fd">添加好友</string>
 	<string name="add_group_hint">请输入分组名称</string>
 	<string name="friend_hint">请输入联系人姓名</string>
 	<string name="reload">重新加载</string>
 	<string name="search_friend">查找联系人</string>
 	<string name="add_gg">增加群组</string>
 	<string name="add_group">增加群组</string>
 	<string name="group_mem">群组成员</string>
 	<string name="group_name">群组名称</string>
 
 	<string name="group_hint">请输入联系人姓名</string>
 	<string name="group_new_hint">请输入新建群组名称</string>
 	<string name="delete">删除</string>
 	<string name="username">用户名</string>
 	<string name="userid">用户ID</string>
 	<string name="select_all">全选</string>
 	<string name="clear_all">全不选</string>
 	<string name="add_contact">增加联系人</string>
 	<string name="staff_manage">人员管理</string>
 	
 	<string name="hide_surface">隐藏本地</string>
 	
 	<string name="apply">申请控制</string>
    <string name="drop">放弃控制</string>
    <string name="upload">上传文件</string>
    <string name="zoomIn">放大</string>
    <string name="zoomOut">缩小</string>
    <string name="homepage">首页</string>
    <string name="prePage">上一页</string>
    <string name="nextPage">下一页</string>
    <string name="gotoPage">跳转到</string>
    <string name="gotook">确定</string>
    <string name="endPage">尾页</string>
</resources>