<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TableLayout
        android:id="@+id/user_login_table"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:orientation="vertical" >

        <TableRow>

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:text="@string/login_username"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/username_input"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="@string/username_hint" >

                <requestFocus />
            </EditText>
        </TableRow>

        <TableRow>

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:text="@string/login_password"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/userpassword_input"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password_hint"
                android:inputType="textPassword" />
        </TableRow>

        <TableRow>

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:text="@string/login_server"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/remoteIp"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="@string/serverip_hint" />
        </TableRow>

        <TableRow>

            <CheckBox
                android:id="@+id/auto"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/remember"
                android:textSize="15sp" />
        </TableRow>
    </TableLayout>

</ScrollView>