<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-light"
        android:padding="5dp"
        android:text="@string/manage_conf"
        android:textSize="30sp" />

    <HorizontalScrollView
        android:id="@+id/HorizontalScrollView01"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_weight="5" >

        <ListView
            android:id="@+id/ListView01"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >
        </ListView>
    </HorizontalScrollView>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4"
        android:background="@color/White" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:background="@drawable/fieldset"
            android:orientation="vertical"
            android:padding="10dp" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical" >

                <RadioGroup
                    android:id="@+id/speakChooseRG"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:orientation="horizontal" >

                    <RadioButton
                        android:id="@+id/radioYN"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checked="true"
                        android:text="@string/yanjiang" />

                    <RadioButton
                        android:id="@+id/radioTW"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/tiwen" />

                    <RadioButton
                        android:id="@+id/radioTL"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/taolun" />

                    <RadioButton
                        android:id="@+id/radioZY"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/ziyou" />
                </RadioGroup>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:orientation="horizontal" >

                    <Button
                        android:id="@+id/startSpeakBTN"
                        style="?android:attr/buttonStyleSmall"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/start_speak" />

                    <Button
                        android:id="@+id/endSpeakBTN"
                        style="?android:attr/buttonStyleSmall"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/end_speak" />
                </LinearLayout>
            </LinearLayout>
        </RelativeLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:background="@android:color/white"
            android:padding="5dp"
            android:text="@string/speak_control"
            android:textColor="@android:color/black" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:background="@android:color/white" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:background="@drawable/fieldset"
            android:orientation="vertical"
            android:padding="10dp" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:gravity="center"
                android:orientation="horizontal" >

                <Button
                    android:id="@+id/startRecordBTN"
                    style="?android:attr/buttonStyleSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/start_record" />

                <Button
                    android:id="@+id/endRecordBTN"
                    style="?android:attr/buttonStyleSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/end_record" />
            </LinearLayout>
        </RelativeLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:background="@android:color/white"
            android:padding="5dp"
            android:text="@string/record_control"
            android:textColor="@android:color/black" />
    </RelativeLayout>

</LinearLayout>