<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@android:color/white"
    android:gravity="center_horizontal"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/toppanel"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-light"
            android:padding="5dp"
            android:text="@string/createConf"
            android:textSize="30sp" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/panelBottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true" >

        <Button
            android:id="@+id/creatOKbtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/create_ok"
            android:textSize="20sp" >
        </Button>
    </RelativeLayout>

    <ScrollView
        android:id="@+id/createConfForm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/panelBottom"
        android:layout_below="@id/toppanel" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <!-- This is the main content -->

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="10dp"
                    android:background="@drawable/fieldset"
                    android:orientation="vertical"
                    android:padding="20dp" >

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:orientation="vertical" >

                        <EditText
                            android:id="@+id/createConfNameET"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:ems="10"
                            android:hint="@string/create_conf_name" >

                            <requestFocus />
                        </EditText>

                        <EditText
                            android:id="@+id/createConfSubET"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:ems="10"
                            android:hint="@string/create_conf_subject" />
                    </LinearLayout>
                </RelativeLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="30dp"
                    android:background="@android:color/white"
                    android:padding="5dp"
                    android:text="@string/create_conf_message"
                    android:textColor="@android:color/black" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <!-- This is the main content -->

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="10dp"
                    android:background="@drawable/fieldset"
                    android:orientation="vertical"
                    android:padding="20dp" >

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:orientation="vertical" >

                        <RadioGroup
                            android:id="@+id/createTypeRG"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal" >

                            <RadioButton
                                android:id="@+id/createTypeVasRB"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:checked="true"
                                android:text="@string/create_type_vas" />

                            <RadioButton
                                android:id="@+id/createTypeFourRB"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:text="@string/create_type_four" />

                            <RadioButton
                                android:id="@+id/createTypeSixRB"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:text="@string/create_type_six" />
                        </RadioGroup>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal" >

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="match_parent"
                                android:gravity="center_vertical"
                                android:paddingRight="10dp"
                                android:text="@string/create_choose_reso"
                                android:textSize="15sp" />

                            <Spinner
                                android:id="@+id/ConfResoSP"
                                android:layout_width="wrap_content"
                                android:layout_height="match_parent" />
                        </LinearLayout>
                    </LinearLayout>
                </RelativeLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="30dp"
                    android:background="@android:color/white"
                    android:padding="5dp"
                    android:text="@string/create_conf_type"
                    android:textColor="@android:color/black" />
            </RelativeLayout>

            <Button
                android:id="@+id/selContactBtn"
                android:layout_gravity="center_horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/selectContact" />
        </LinearLayout>
    </ScrollView>

</RelativeLayout>